# Vibe_Interface

./: .gitignore  AGENT_LAUNCH.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  package.json  pnpm-lock.yaml
apps/desktop/: .gitignore  package.json  tsconfig.json  tsconfig.node.json
apps/desktop/src/main/: index.ts  ipc.ts  store.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: index.html
apps/desktop/src/renderer/src/: App.tsx  client.ts  electron.d.ts
apps/desktop/src/renderer/src/hooks/: useOverview.ts
apps/mobile/: .gitignore  app.json  metro.config.js  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx  setup.tsx
apps/mobile/app/(tabs)/: _layout.tsx
apps/mobile/app/(tabs)/approvals/: [id].tsx  index.tsx
apps/mobile/app/(tabs)/sessions/: [id].tsx  index.tsx
apps/mobile/src/: client.ts  storage.ts
apps/mobile/src/hooks/: useOverview.ts
bridges/pi-agent/: README.md  pyproject.toml
bridges/pi-agent/examples/: request_approval.py  run_claude.py  run_codex.py
bridges/pi-agent/src/pi_agent/: cli.py  terminal_relay.py
bridges/pi-agent/src/pi_agent/hooks/: pi_approve.py
bridges/vi-agent/: README.md  pyproject.toml
bridges/vi-agent/examples/: request_approval.py  run_claude.py  run_codex.py
bridges/vi-agent/src/vi_agent/: cli.py  terminal_relay.py
bridges/vi-agent/src/vi_agent/hooks/: vi_approve.py
docs/: HANDOFF.md  VI_MILESTONE.md  cloud-control-plane.md  vi-cli.md  vi-orchestrator.md  vi-skills.md
scripts/: dev-wsl.sh  vi-orchestrator-smoke.sh
(+5 files in other folders)
