[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-agent"
version = "0.1.0"
description = "Remote agent client for Project Interface"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "PI" }]
dependencies = ["websocket-client>=1.8.0"]

[project.scripts]
pi-agent = "pi_agent.cli:main"
pi-approve = "pi_agent.hooks.pi_approve:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
