[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vi-agent"
version = "0.1.0"
description = "Remote agent client for Vibe Interface"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "PI" }]
dependencies = ["websocket-client>=1.8.0"]

[project.scripts]
vi-agent = "vi_agent.cli:main"
vi-approve = "vi_agent.hooks.pi_approve:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
